--- a/css/main.css
+++ b/css/main.css
@@ -231,3 +231,71 @@ ul{
 .traffic i{
   margin-right: 10px;
 }
+
+/*===============Banner Images===========*/
+.banner {
+  position: relative;
+  margin-bottom: -8px;
+}
+
+.banner img {
+  width: 100%;
+}
+
+.banner .container {
+  /*position: absolute;*/
+  top: 0;
+  /*left: 9.8rem;*/
+  right: 9.8rem;
+  text-align: center;
+  /*font-family: 'Raleway', sans-serif;*/
+  /*color: #fff;*/
+  z-index: 9;
+}
+
+.banner .container h1 {
+  /*font-size: 4rem;*/
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 5em;
+}
+
+.banner .container h3 {
+  font-weight: normal;
+  /*font-size: 2rem;*/
+}
+
+/*==Banner Owl Carousel===*/
+#owl-four-nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.banner .owl-nav .owl-prev, .banner .owl-nav .owl-next{
+  /*font-size: 4rem;*/
+  font-weight: bold;
+  background: transparent;
+  border: none;
+  /*color: #fff;*/
+  cursor: pointer;
+}
+
+.banner #owl-four-nav {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  z-index: 9;
+}
+.banner .container h1,
+.banner .owl-nav .owl-prev, 
+.banner .owl-nav .owl-next,
+.page-content .page-article h1
+{
+  font-size: 4rem;
+}
+.cloned{
+  width: 100%;
+}
+
+/*====For Video=====*/
