--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ body {
 
 .ww-home-page:before {
   content: "";
-  background-color: rgb(72 44 40 / 40%);;
+  background: linear-gradient(52deg, rgb(224 249 255 / 24%) 0%, rgb(98 255 248 / 17%) 100%);
   width: 100%;
   height: 100%;
   height: 100vh;
@@ -208,7 +208,7 @@ body {
         position: relative;
         top: 20%;}
   .ww-home-page {
-  background-position: 50%; }
+  background-position: 60%; }
 }
 .mb-4, .my-4 {
     margin-bottom: 3rem!important;
